--- a/Basics_of_MD_Class_1.ipynb
+++ b/Basics_of_MD_Class_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9Go+2AJ4A15iul4fRJhAa",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP4Cn6UoO5je+UgDRAWbCJy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +26,26 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/EstebanJM/V.Data/blob/main/Basics_of_MD_Class_1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Title\n",
+        "## Subtitle\n",
+        "### Subsubtitle"
+      ],
+      "metadata": {
+        "id": "OcXBqswTcdDb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Section 2"
+      ],
+      "metadata": {
+        "id": "kjWc4lV2eWyE"
+      }
     },
     {
       "cell_type": "code",
