Creado mediante Colaboratory

--- a/Basics_of_MD_Class_1.ipynb
+++ b/Basics_of_MD_Class_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4Cn6UoO5je+UgDRAWbCJy",
+      "authorship_tag": "ABX9TyPM4fRtwdGe9aBPbbJzt+cX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Section 2"
+        "##Section 1"
       ],
       "metadata": {
         "id": "kjWc4lV2eWyE"
@@ -55,6 +55,70 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##subsection 1"
+      ],
+      "metadata": {
+        "id": "VuUwcDRbeuVa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-Wsi4XEte0-O"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Seccion nueva"
+      ],
+      "metadata": {
+        "id": "3brLGvb6fG0X"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Bold\n",
+        "\n",
+        "Using   `**`:\n",
+        "\n",
+        "`**Esteban**`=**Esteban**"
+      ],
+      "metadata": {
+        "id": "Hjaj-AskfNbf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Italic\n",
+        "\n",
+        "Use `*`\n",
+        "\n",
+        "`*Jiménez*` = *Jiménez*"
+      ],
+      "metadata": {
+        "id": "jaRZyRA-gAGW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Excercise\n",
+        "\n",
+        "**Michael Esteban** *Jiménez* ***Medina***"
+      ],
+      "metadata": {
+        "id": "z_6NDcFUhLih"
+      }
     }
   ]
 }
