--- a/Basics_of_MD_Class_1.ipynb
+++ b/Basics_of_MD_Class_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPM4fRtwdGe9aBPbbJzt+cX",
+      "authorship_tag": "ABX9TyMqzptlj2a0PsD6MwTnxhwh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,15 +48,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Q7s_v7Qll0Rs"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "##subsection 1"
@@ -66,18 +57,11 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "-Wsi4XEte0-O"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "# Seccion nueva"
+        "# New section\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "3brLGvb6fG0X"
@@ -118,6 +102,108 @@
       ],
       "metadata": {
         "id": "z_6NDcFUhLih"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# List"
+      ],
+      "metadata": {
+        "id": "snvc6iLTjMxJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Unordered List\n",
+        "\n",
+        "**List of sports**:\n",
+        "\n",
+        "* Football\n",
+        "* Basketball\n",
+        "* Volleyball\n"
+      ],
+      "metadata": {
+        "id": "leC5OJizjSbJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ordered List\n",
+        "\n",
+        "**The best singers**:\n",
+        "\n",
+        "1. Justin Bieber\n",
+        "2. Maluma\n",
+        "3. Adele"
+      ],
+      "metadata": {
+        "id": "AxokQMHekC93"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Nested List\n",
+        "\n",
+        "**To-Do List:**\n",
+        "\n",
+        "1. Training\n",
+        "\n",
+        "  1.1. Wake-up early\n",
+        "\n",
+        "  1.2. Run 10 kms\n",
+        "\n",
+        "2. Rest\n",
+        "\n",
+        "  2.1 Sleep\n",
+        "  \n"
+      ],
+      "metadata": {
+        "id": "xOg_4ubqkWG0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exercise\n",
+        "\n",
+        "Create a nested list for you tomorrow\n",
+        "\n",
+        "**To-do list for tomorrow**\n",
+        "\n",
+        "1. *Go to university*\n",
+        "\n",
+        "  1.1 Wake-up early\n",
+        "\n",
+        "  1.2 Take a shower\n",
+        "\n",
+        "  1.3 Get dressed\n",
+        "\n",
+        "  1.4 Eat breakfast\n",
+        "\n",
+        "  1.5 Take a bus\n",
+        "\n",
+        "  1.6 Walk to the university\n",
+        "\n",
+        "2. *Go to the class \"Econometría financiera\"*\n",
+        "\n",
+        "3. *Go back to the home*\n",
+        "\n",
+        "  3.1 Walk to the stop bus \n",
+        "\n",
+        "  3.2 Take a bus\n",
+        "\n",
+        "  3.3 Walk to the home\n",
+        "\n",
+        "4. *Take a Lunch*\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-tpJAF1NlfZb"
       }
     }
   ]
