--- a/Basics_of_MD_Class_1.ipynb
+++ b/Basics_of_MD_Class_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOTr/j3dnzpCx/Lf0ZH4fuT",
+      "authorship_tag": "ABX9TyNm1O9oye4wI8LWqAAZu9A/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -266,9 +266,39 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Equations"
+      ],
       "metadata": {
-        "id": "-iawtKPLrSMQ"
+        "id": "7ef_Fpdcd4xB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##In Line\n",
+        "\n",
+        "what's mean *in line*? it means in the same line that you are typing.\n",
+        "\n",
+        "An in line equation will start and end with the symbol \"$\"\n",
+        "\n",
+        "For example: $a^2+b^2=c^2$"
+      ],
+      "metadata": {
+        "id": "mK-bSBqieFKi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Some tricks\n",
+        "\n",
+        "* Subindex: $x_{1}$ \n",
+        "* Supraindex: $x^{2+3+4+5}$\n",
+        "* Combination :$x^{2}_{3}$\n"
+      ],
+      "metadata": {
+        "id": "tsDWMfNyfV1l"
       }
     },
     {
@@ -279,6 +309,13 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "MHa9XLilgvPE"
+      }
     }
   ]
 }
