Creado mediante Colaboratory

--- a/01_Phyton_Basics.ipynb
+++ b/01_Phyton_Basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3111BxBjWX/C5afwcwYM/",
+      "authorship_tag": "ABX9TyOmtcfcFDK4piiqpwsx2MCp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -137,7 +137,7 @@
         "id": "CaHFrxLZnXWQ",
         "outputId": "15e47d75-5f7e-4834-a7b2-c5519033241f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
         "id": "DdHeHGRroOUp",
         "outputId": "49ed5a55-c7ca-4ad5-af7d-ab9d72b5cb59"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +191,7 @@
         "id": "OqneJ062oTPP",
         "outputId": "981c6644-1cb4-4dd2-ba5a-dcf31b99a04e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -218,7 +218,7 @@
         "id": "d_c43v-JobrQ",
         "outputId": "9599f9ba-50ca-45de-b462-65753ba492f3"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -234,9 +234,267 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Exponential\n",
+        "2**3"
+      ],
+      "metadata": {
+        "id": "xLavNhFbop9D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9526e62c-9c8f-4153-8ace-76afefdc56d0"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3.2 Composite operations and parenthesis"
+      ],
+      "metadata": {
+        "id": "RTsnHoE2jPAe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "\n",
+        "2 + 3*4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uEne4NkZiiEF",
+        "outputId": "9534699d-c747-484a-9a54-7a4de205cdc3"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "You can change the operator precedence using **pharenteshis**"
+      ],
+      "metadata": {
+        "id": "-f4587MHjDRw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example\n",
+        "\n",
+        "(2+3)*4"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7daIunk7jFD7",
+        "outputId": "7c0768af-cd3a-40db-ff5a-b65471dc2393"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3.3 integers and real numbers "
+      ],
+      "metadata": {
+        "id": "VTXTtYSxjTxw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Interger (with no decimal positions)\n",
+        "type(26) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rHGzZxd8jHh3",
+        "outputId": "8668a4d4-fb10-43b2-e1b4-dd0261cc3794"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Real number (with decimal positions)\n",
+        "\n",
+        "type(2.5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7l0jYT8ykcnh",
+        "outputId": "238d1556-1587-4d61-8dc5-9ea094eb8396"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Examples \n",
+        "## Find out if the next expressions are int our floats\n",
+        "2+3.0\n",
+        "2.5*7\n",
+        "4.0/2"
+      ],
+      "metadata": {
+        "id": "obaJzcvOlCl-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(2+3.0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pLSmxqOFkrYM",
+        "outputId": "cd844797-7b83-4df1-9873-1415904b2228"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(2.5*7)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D6-7qUALl_fd",
+        "outputId": "55c30014-f8ec-4ca5-8bf8-1c867e422850"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(4.0/2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0OwxiGqGmCOB",
+        "outputId": "fb066aa4-f0c6-45c9-bc81-5ba66b7fac80"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xLavNhFbop9D"
+        "id": "HM1H36kvmE71"
       },
       "execution_count": null,
       "outputs": []
