Creado mediante Colaboratory

--- a/01_Phyton_Basics.ipynb
+++ b/01_Phyton_Basics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmtcfcFDK4piiqpwsx2MCp",
+      "authorship_tag": "ABX9TyNNH/Gk0kbeZAAQ82QxvO8L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -491,10 +491,199 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Scientific notation"
+      ],
+      "metadata": {
+        "id": "KbVR6p3OmzIh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example\n",
+        "5e1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hEarpSonoguP",
+        "outputId": "a1fca0dc-4880-4533-ee97-f5c08052a2a8"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "50.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Example\n",
+        "6e-2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8RDsUBnMos9W",
+        "outputId": "016cbe68-5294-4617-fdcc-82d0e7a7a51e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.06"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Practice\n",
+        "# Write 1 millon in scientific notation\n",
+        "# what is the result of 3e0.2"
+      ],
+      "metadata": {
+        "id": "ZBtChB6somNW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e6"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5PSHwPoBpJzt",
+        "outputId": "9968195f-ad1d-4bc4-8938-f25bef83a75f"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000000.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e0.2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "4iEOkioFo3b6",
+        "outputId": "40088db2-a4f3-4549-df86-990f04283cb0"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-9f15c8039731>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    3e0.2\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Transformation\n",
+        "You can change the `type()` "
+      ],
+      "metadata": {
+        "id": "l38jyB-SqLx1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "float(2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UEBBf6Qfqpp0",
+        "outputId": "7ba0f7dc-db87-4c25-8070-b49df415e851"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Example\n",
+        "int(3.3333)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cGup1CPQquIk",
+        "outputId": "640c745b-7909-473e-eccc-58e5e68f04eb"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "HM1H36kvmE71"
+        "id": "x-SwD_Kmqvcy"
       },
       "execution_count": null,
       "outputs": []
